unpackaged/main/default/objects/pse__Project_Task_Points_Complete_History__c/pse__Project_Task_Points_Complete_History__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ProjectTaskPointsCompleteHistoryHelp</customHelpPage>
    <description>Tracks changes made to the Points Complete field on project tasks. Project tasks have a master-detail relationship with project task points complete histories.</description>
    <label>Project Task Points Complete History</label>
    <nameField>
        <displayFormat>PTSCOMP-{0000}</displayFormat>
        <label>Project Task Points Complete History Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Tasks Points Complete History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>