unpackaged/main/default/objects/pse__Project_Task_Points_Complete_History__c/fields/pse__Change_in_Value__c.field-meta.xml
<CustomField>
    <fullName>pse__Change_in_Value__c</fullName>
    <inlineHelpText>The change in value from the last change.</inlineHelpText>
    <label>Change in Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>