unpackaged/main/default/objects/pse__Project_Task_Points_Complete_History__c/fields/pse__New_Value__c.field-meta.xml
<CustomField>
    <fullName>pse__New_Value__c</fullName>
    <label>New Value</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>