unpackaged/main/default/objects/pse__Project_Task_Points_Complete_History__c/fields/pse__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Task__c</fullName>
    <label>Project Task</label>
    <referenceTo>pse__Project_Task__c</referenceTo>
    <relationshipLabel>Project Tasks Points Complete History</relationshipLabel>
    <relationshipName>Project_Tasks_Points_Complete_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>